tests/suite/snapshots/suite__check__tests__check__bad_class_shadowing_3.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_class_shadowing_3.xi:2:5]
   │
 2 │     a, a: int
   ·     ────┬────  
   ·         ╰────── Name already bound in environment
───╯

